--- a/media/.mpv/input.conf
+++ b/media/.mpv/input.conf
@@ -1,398 +1,129 @@
-# TODO:
-# o to stop
+# https://github.com/mpv-player/mpv/blob/master/etc/input.conf
 
-# kept default bindings# {{{
-f cycle fullscreen # toggle fullscreen
-p cycle pause # toggle pause/playback mode
-m cycle mute
+# * Prefix Key Unbinding
+# sub[t]itle and [t]oggle/cycle prefix key
+t ignore
 
-# audio sync and adjustment
-+ add audio-delay 0.100 # this changes audio/video sync
-- add audio-delay -0.100
-( add balance -0.1 # adjust audio balance in favor of left
-) add balance 0.1 # right
-# speed
-[ multiply speed 0.9091 # scale playback speed
-] multiply speed 1.1
-{ multiply speed 0.5
-} multiply speed 2.0
-BS set speed 1.0 # reset speed to normal
-# frame jump
-. frame_step # advance one frame and pause
-, frame_back_step # go back by one frame and pause
-# chapter
-! add chapter -1 # skip to previous chapter
-@ add chapter 1 # next
-
-# }}}
-# Rebinds {{{
-# change subtitle font size
-V add sub-scale +0.1 # increase subtitle font size
-v add sub-scale -0.1 # decrease subtitle font size
-
-# Don't quit on Escape
-ESC ignore
-ENTER ignore
-
-# seeking
-n seek -1
-e seek 1
-h seek -5
-i seek 5
-
-# pause and play
-o cycle pause
-
-# screenshots
-s async screenshot
-# without subtitles
-S async screenshot video
-t async screenshot
-T async screenshot video
-
-# zooming/kind of
+# [z]oom prefix key
 z ignore
-z-o add panscan -0.1 # zoom out with -panscan 0 -fs
-z-i add panscan +0.1 # in
+
+# [p]rofile switching prefix key
+p ignore
+
+# * Audio
+# default
+m cycle mute
 
 N add volume -1
 E add volume 1
 
+# cycle through audio streams
+t-a cycle audio
 
-#Multikey bindings# {{{
-# Must bind intermediates to ignore
-# unbind space
-SPACE ignore
-# space bindings# {{{
-# seek to specific precentage time?
-SPACE-a seek -50
-SPACE-r seek -25
-SPACE-s seek -10
-SPACE-t no-osd seek -5 - exact
-SPACE-d no-osd seek -1 - exact
-SPACE-h no-osd seek 1 - exact
-SPACE-n no-osd seek 5 - exact
-SPACE-e seek 10
-SPACE-i seek 25
-SPACE-o seek 50
-# }}}
+# default
+# audio/video sync adjustment
++ add audio-delay 0.100
+- add audio-delay -0.100
 
-# for both tmux and bspwm (to my knowledge, mpv doesn't support different mappings for gui v term so doing it based on title)
-# wm experimentation {{{
-r ignore
-R ignore
-r-c ignore
-r-m ignore
+# default
+# adjust audio balance in favor of left
+( add balance -0.1
+# right
+) add balance 0.1
 
-# r is redraw {{{
-# selection {{{
-# desktops/tmux win
-r-a run bash wm_action mpv ra
-r-r run bash wm_action mpv rr
-r-s run bash wm_action mpv rs
-r-t run bash wm_action mpv rt
-r-d run bash wm_action mpv rd
-r-h run bash wm_action mpv rh
-# windows/tmux pane
-r-n run bash wm_action mpv rn
-r-e run bash wm_action mpv re
-# desktops/tmux win
-r-i run bash wm_action mpv ri
-r-o run bash wm_action mpv ro
-# last desktop/tmux win
-r-l run bash wm_action mpv rl
-# last window/tmux pane
-r-u run bash wm_action mpv ru
+# * Loops and Video Cutting
+# default
+l ab-loop
+L cycle-values loop-file "inf" "no"
 
-# }}}
-
-# move to destkop {{{
-R-a run bash wm_action mpv Ra
-R-r run bash wm_action mpv Rr
-R-s run bash wm_action mpv Rs
-R-t run bash wm_action mpv Rt
-R-d run bash wm_action mpv Rd
-R-h run bash wm_action mpv Rh
-R-n run bash wm_action mpv Rn
-R-e run bash wm_action mpv Re
-R-i run bash wm_action mpv Ri
-R-o run bash wm_action mpv Ro
-
-#}}}
-
-# moving windows within desktop {{{
-# move to biggest
-r-c-m run bash wm_action mpv rcm
-# directions
-r-c-h run bash wm_action mpv rch
-r-c-n run bash wm_action mpv rcn
-r-c-e run bash wm_action mpv rce
-r-c-i run bash wm_action mpv rci
-# cycle window move
-r-. run bash wm_action mpv r.
-r-, run bash wm_action mpv r,
-# desktop balance
-r-b run bash wm_action mpv rb
-
-# }}}
-
-# resize {{{
-r-m-h run bash wm_action mpv rmh
-r-m-n run bash wm_action mpv rmn
-r-m-e run bash wm_action mpv rme
-r-m-i run bash wm_action mpv rmi
-
-# }}}
-
-# layout {{{
-# monocle toggle
-r-k run bash wm_action mpv rk
-# sticky toggle
-r-y run bash wm_action mpv ry
-# for tmux (already have f in gui mpv)
-r-f run bash wm_action mpv rf
-
-#  }}}
-
-# close
-r-x run bash wm_action mpv rx
-# new (tmux)
-r-w run bash wm_action mpv rw
-
-# if running audio in terminal
-# tmux splitting/breaking
-r-/ run bash wm_action mpv r/
-r-' run bash wm_action mpv r'
-# r-- run bash wm_action mpv r-
-r-! run bash wm_action mpv r!
-
-# }}}
-# }}}
-# }}}
-
-# Loops and Video Cutting {{{
 a run "mkdir" "-p" "/tmp/ffcut" ; run "/bin/sh" "-c" "echo ${=time-pos} > /tmp/ffcut/start" ; set ab-loop-a ${=time-pos}
 b run "mkdir" "-p" "/tmp/ffcut" ; run "/bin/sh" "-c" "echo ${=time-pos} > /tmp/ffcut/end &" ; set ab-loop-b ${=time-pos}
-# clear
-c set ab-loop-a no
-# sets a, b, then clears
-# g ab_loop
+# [c]lear
+c set ab-loop-a no ; set ab-loop-b no
+
 G run "/bin/sh" "-c" "echo '${path}' > /tmp/ffcut/last_file" ; run "ffcut" "${path}"
-# SPACE-G run "/bin/sh" "-c" "echo '${path}' > /tmp/ffcut/last_file" ; run "ffcut" "-m" "${path}"
 
-# }}}
+# * Miscellaneous
+# default
+SPACE cycle pause
+f cycle fullscreen
+I script-binding stats/display-stats-toggle
 
-# }}}
+# * Profile Switching
+p-l apply-profile low-latency ; show-text "Profile: low-latency"
+p-d apply-profile default ; show-text "Profile: default"
+p-g apply-profile gpu-hq ; show-text "Profile: gpu-hq"
+p-h apply-profile gpu-hq ; show-text "Profile: gpu-hq"
 
+# * Screenshots
+s async screenshot
+# without subtitles
+S async screenshot video
 
-# mpv keybindings#{{{
-#
-# Location of user-defined bindings: ~/.config/mpv/input.conf
-#
-# Lines starting with # are comments. Use SHARP to assign the # key.
-# Copy this file and uncomment and edit the bindings you want to change.
-#
-# List of commands and further details: DOCS/man/input.rst
-# List of special keys: --input-keylist
-# Keybindings testing mode: mpv --input-test --force-window --idle
-#
-# Use 'ignore' to unbind a key fully (e.g. 'ctrl+a ignore').
-#
-# Strings need to be quoted and escaped:
-# KEY show_text "This is a single backslash: \\ and a quote: \" !"
-#
-# You can use modifier-key combinations like Shift+Left or Ctrl+Alt+x with
-# the modifiers Shift, Ctrl, Alt and Meta (may not work on the terminal).
-#
-# The default keybindings are hardcoded into the mpv binary.
-# You can disable them completely with: --no-input-default-bindings
+# * Seeking
+n seek -1
+e seek 1
+h seek -5
+i seek 5
+u no-osd seek -0.5 - exact
+y no-osd seek +0.5 - exact
+9 seek -0.25 - exact
+0 seek 0.25 - exact
 
-# Developer note:
-# On compilation, this file is baked into the mpv binary, and all lines are
-# uncommented (unless '#' is followed by a space) - thus this file defines the
-# default key bindings.
+k add chapter 1
+K add chapter -1
 
-# If this is enabled, treat all the following bindings as default.
-#default-bindings start
-# }}}
-# default stuff:# {{{
-#MOUSE_BTN0 ignore # don't do anything
-#MOUSE_BTN0_DBL cycle fullscreen # toggle fullscreen on/off
-#MOUSE_BTN2 cycle pause # toggle pause on/off
-#MOUSE_BTN3 seek 10
-#MOUSE_BTN4 seek -10
-#MOUSE_BTN5 add volume 2
-#MOUSE_BTN6 add volume -2
+# default
+# advance one frame and pause
+. frame-step
+# go back by one frame and pause
+, frame-back-step
 
-# Mouse wheels, touchpad or other input devices that have axes
-# if the input devices supports precise scrolling it will also scale the
-# numeric value accordingly
-#AXIS_UP seek 10
-#AXIS_DOWN seek -10
-#AXIS_LEFT seek 5
-#AXIS_RIGHT seek -5
+# default
+# skip to next file
+> playlist-next
+# skip to next file
+ENTER playlist-next
+# skip to previous file
+< playlist-prev
 
-## Seek units are in seconds, but note that these are limited by keyframes
-#RIGHT seek 5
-#LEFT seek -5
-#UP seek 60
-#DOWN seek -60
-# Do smaller, always exact (non-keyframe-limited), seeks with shift.
-# Don't show them on the OSD (no-osd).
-#Shift+RIGHT no-osd seek 1 - exact
-#Shift+LEFT no-osd seek -1 - exact
-#Shift+UP no-osd seek 5 - exact
-#Shift+DOWN no-osd seek -5 - exact
-#PGUP add chapter 1 # skip to next chapter
-#PGDWN add chapter -1 # skip to previous chapter
-#Shift+PGUP seek 600
-#Shift+PGDWN seek -600
-#[ multiply speed 0.9091 # scale playback speed
-#] multiply speed 1.1
-#{ multiply speed 0.5
-#} multiply speed 2.0
-#BS set speed 1.0 # reset speed to normal
-#q quit
-#Q quit_watch_later
-#q {encode} quit
-#ESC set fullscreen no
-#ESC {encode} quit
-#p cycle pause # toggle pause/playback mode
-#. frame_step # advance one frame and pause
-#, frame_back_step # go back by one frame and pause
-#SPACE cycle pause
-#> playlist_next # skip to next file
-#ENTER playlist_next # skip to next file
-#< playlist_prev # skip to previous file
-#O osd # cycle through OSD mode
-#o show_progress
-#P show_progress
-#I show_text "${filename}" # display filename in osd
-#z add sub-delay -0.1 # subtract 100 ms delay from subs
-#x add sub-delay +0.1 # add
-#ctrl++ add audio-delay 0.100 # this changes audio/video sync
-#ctrl+- add audio-delay -0.100
-#9 add volume -2
-#/ add volume -2
-#0 add volume 2
-#* add volume 2
-#m cycle mute
-#1 add contrast -1
-#2 add contrast 1
-#3 add brightness -1
-#4 add brightness 1
-#5 add gamma -1
-#6 add gamma 1
-#7 add saturation -1
-#8 add saturation 1
-#d cycle framedrop # cycle through framedrop modes
-# toggle deinterlacer (automatically inserts or removes required filter)
-#D cycle deinterlace
-#r add sub-pos -1 # move subtitles up
-#t add sub-pos +1 # down
-#v cycle sub-visibility
-# stretch SSA/ASS subtitles with anamorphic videos to match historical
-#V cycle ass-vsfilter-aspect-compat
-#j cycle sub # cycle through subtitles
-#J cycle sub down # ...backwards
-#SHARP cycle audio # switch audio streams
-#_ cycle video
-#T cycle ontop # toggle video window ontop of other windows
-#f cycle fullscreen # toggle fullscreen
-#s screenshot # take a screenshot
-#S screenshot video # ...without subtitles
-#Alt+s screenshot - each-frame # automatically screenshot every frame
-#w add panscan -0.1 # zoom out with -panscan 0 -fs
-#e add panscan +0.1 # in
-#POWER quit
-#MENU cycle osd
-#PLAY cycle pause
-#PAUSE cycle pause
-#PLAYPAUSE cycle pause
-#STOP quit
-#FORWARD seek 60
-#REWIND seek -60
-#NEXT playlist_next
-#PREV playlist_prev
-#VOLUME_UP add volume 2
-#VOLUME_DOWN add volume -2
-#MUTE cycle mute
-#CLOSE_WIN quit
-#CLOSE_WIN {encode} quit
-#E cycle edition # next edition
-#ctrl+c quit
+# * Speed
+# scale playback spee[d]
+d multiply speed 1.1
+D multiply speed 0.9091
+# default
+BS set speed 1.0
 
-# Apple Remote section
-#AR_PLAY cycle pause
-#AR_PLAY_HOLD quit
-#AR_CENTER cycle pause
-#AR_CENTER_HOLD quit
-#AR_NEXT seek 10
-#AR_NEXT_HOLD seek 120
-#AR_PREV seek -10
-#AR_PREV_HOLD seek -120
-#AR_MENU show_progress
-#AR_MENU_HOLD cycle mute
-#AR_VUP add volume 2
-#AR_VUP_HOLD add chapter 1
-#AR_VDOWN add volume -2
-#AR_VDOWN_HOLD add chapter -1
+# * Subtitles
+# cycle through subtitles
+v cycle sub
+V cycle sub down
 
-# Joystick section
-# WARNING: joystick support has to be explicitly enabled at
-# compiletime with --enable-joystick
-#
+# change subtitle size; [w]umbo?
+w add sub-scale -0.1
+W add sub-scale +0.1
 
-#JOY_AXIS0_PLUS seek 10
-#JOY_AXIS0_MINUS seek -10
-#JOY_AXIS1_MINUS seek 60
-#JOY_AXIS1_PLUS seek -60
-#JOY_BTN0 cycle pause
-#JOY_BTN1 cycle osd
-#JOY_BTN2 add volume 2
-#JOY_BTN3 add volume -2
+# [t]oggle subtitles
+t-t cycle sub-visibility
 
-# For dvdnav:// and bdnav://
+# move subtitles down
+t-n add sub-pos +1
+# up
+t-e add sub-pos -1
 
-# navigation controls during playback
-#ENTER {discnav} discnav menu # DISCNAV MENU
-# BS {discnav} discnav prev # DISCNAV PREVIOUS menu (in the order chapter->title->root)
-# navigation controls when showing menu (additionally to the controls above)
-#UP {discnav-menu} discnav up # DISCNAV UP
-#DOWN {discnav-menu} discnav down # DISCNAV DOWN
-#LEFT {discnav-menu} discnav left # DISCNAV LEFT
-#RIGHT {discnav-menu} discnav right # DISCNAV RIGHT
-#ENTER {discnav-menu} discnav select # DISCNAV SELECT (ok)
-#MOUSE_BTN0 {discnav-menu} discnav mouse
-#MOUSE_MOVE {discnav-menu} discnav mouse_move
+# subtract 100ms delay from subs
+t-h add sub-delay -0.1
+# add
+t-i add sub-delay +0.1
 
-# For tv://
-#h cycle tv-channel -1 # previous channel
-#k cycle tv-channel +1 # next channel
+# * Video
+# cycle through video streams
+t-v cycle video
 
-#
-# Legacy bindings (may or may not be removed in the future)
-#
-#! add chapter -1 # skip to previous chapter
-#@ add chapter 1 # next
+# default
+A cycle-values video-aspect "16:9" "4:3" "2.35:1" "-1"
 
-#
-# Not assigned by default
-# (not an exhaustive list of unbound commands)
-#
-
-# ? add sub-scale +0.1 # increase subtitle font size
-# ? add sub-scale -0.1 # decrease subtitle font size
-# ? sub_step -1 # immediately display next subtitle
-# ? sub_step +1 # previous
-# ? cycle_values window-scale 0.5 2 1 # switch between 1/2, 2x, unresized window size
-# ? cycle colormatrix
-# ? add audio-delay 0.100 # this changes audio/video sync
-# ? add audio-delay -0.100
-# ? cycle angle # switch DVD/Bluray angle
-# ? add balance -0.1 # adjust audio balance in favor of left
-# ? add balance 0.1 # right
-# ? cycle sub-forced-only # toggle DVD forced subs
-# ? cycle program # cycle transport stream programs
-# ? stop # stop playback (quit or enter idle mode)
-# }}}
+# * "Zoom"
+# zoom out with -panscan 0 -fs
+z-o add panscan -0.1
+z-i add panscan +0.1
