Update X and bspwm config
These changes should make things easier when I need to run two X sessions at
once for testing tdrop with some other WM/DE or for whatever other reason.

X
- Switch to org style headings in xintrc
- Add .bxinitrc that's executed with bash so don't have to worry about POSIX
  compliance
- Add xrestart script to save pid for a program for the current DISPLAY so can
later kill and restart it without affecting other x sessions; use for xcape
- Disable mouse acceleration in X config file (xset not recommended:
https://wiki.archlinux.org/index.php/Mouse_acceleration#Configuration_example)
- Add mpd-notification to packages (was in .xinitrc but missing from packages)
- Prefer longopts
- Don't use & for programs where already using daemon flag
- Don't start tmux session (no point, doesn't take a significant amount of time
to start later)
- Remove tty specific configuration; run all daemons for all ttys except for
compton when IS_DE is set
- Just run $1; remove case statement
- Remove conky (haven't used in a while)

Bspwm
- Update unfocused border color to be more distinguishable
- Base border and gap size on screen width (also move monitor helpers to own file)
- Set tdrop width based on current bspwm border size
- Stop using borderless monocle
- Use new builtin bspc --restart
- Enable rainbow-mode in bspwmrc
- Make rldbspc just reload rules
  - Don't kill sxhkd; switch to swapping out config files and reloading sxhkd
  for empty desktop keybindings; this way the correct config files can be set
  when starting X instead of trying to determine whether to load wm_sxhkdrc in maybe_reload_sxhkd
  - Put behavior for nopanel arg into a separate savebattery script
- Space out related settings and unalign them
- Split wm keybindings out of sxhkdrc so can start a different WM/DE without
  them (SXHKD_EXTRA_CONFIGS in .bxinitrc)

--- a/root/etc/X11/xorg.conf.d/my-xorg.conf
+++ b/root/etc/X11/xorg.conf.d/my-xorg.conf
@@ -1,15 +1,16 @@
-# * General
-# Increase blank time
+# * Screen Blank Time
+# increase blank time
 Section "ServerLayout"
-    Identifier "ServerLayout Settings"
+    Identifier "Configure DPMS"
     Option "StandbyTime" "0"
     Option "SuspendTime" "0"
     Option "OffTime"     "0"
-    Option "BlankTime"   "25"
+    Option "BlankTime"   "20"
 EndSection
 
-# Doesn't work
-# Using these buttons as modifiers
+# * Button Config
+# TODO doesn't work
+# using these buttons as modifiers
 # Section "InputClass"
 #     Identifier "TrackPoint Altered Buttons"
 #     # MatchProduct "TPPS/2 IBM TrackPoint"
@@ -18,3 +19,12 @@ EndSection
 #     # man (libinput|evdev) 4
 #     Option "ButtonMapping" "50 1 51"
 # EndSection
+
+# * Disable Mouse Acceleration
+Section "InputClass"
+    Identifier "Disable Acceleration"
+    MatchIsPointer "yes"
+    Option "AccelerationProfile" "-1"
+    Option "AccelerationScheme" "none"
+    Option "AccelSpeed" "-1"
+EndSection
