--- a/startup/.nvidia-xinitrc
+++ b/startup/.nvidia-xinitrc
@@ -1,4 +1,3 @@
-#!/usr/bin/env bash
 xrandr --dpi 96
 
 ./.xinitrc
@@ -6,5 +5,5 @@ xrandr --dpi 96
 # vim: set ft=sh:
 # Local Variables:
 # mode:sh
-# sh-shell: bash
+# sh-shell: sh
 # End:
