Redshift - Only change temperature for primary output/monitor

--- a/common/.config/redshift.conf
+++ b/common/.config/redshift.conf
@@ -18,3 +18,5 @@ gamma=0.8:0.7:0.8
 [randr]
 ; only change temperature for screen 0 (by default)
 screen=0
+; only change for primary output/monitor
+crtc=0
